build build npm

--- a/.github/workflows/.github-actions.yml
+++ b/.github/workflows/.github-actions.yml
@@ -79,7 +79,7 @@ jobs:
       - name: npm install
         run: |
           npm --version
-          npm run production
+          npm run build
 
       - name: 'Compress public folder'
         run: tar -czvf public.tgz public/
