--- a/.env.github
+++ b/.env.github
@@ -3,6 +3,6 @@
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel_db
+DB_DATABASE=testing
 DB_USERNAME=root
 DB_PASSWORD=root
