--- a/.github/workflows/.github-actions.yml
+++ b/.github/workflows/.github-actions.yml
@@ -9,6 +9,25 @@ on:
   workflow_dispatch:
 
 jobs:
+  laravel-pint:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Composer Install
+        run: composer install
+
+      - name: Run Laravel Pint
+        run: ./vendor/bin/pint
+
+      - name: Commit changes
+        uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: Apply Laravel Pint changes
+        env:
+          GITHUB_TOKEN: ${{ secrets.PINT }}  
   composer:
     runs-on: ubuntu-latest
 
