--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,11 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
-        "livewire/livewire": "^2.10"
+        "livewire/livewire": "^2.10",
+        "spatie/laravel-activitylog": "^4.7"
     },
     "require-dev": {
+        "doctrine/dbal": "^3.5",
         "fakerphp/faker": "^1.9.1",
         "laravel/pint": "^1.3",
         "laravel/sail": "^1.0.1",
