--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "livewire/livewire": "^2.10",
+        "phpsa/filament-authentication": "^2.3",
         "spatie/laravel-activitylog": "^4.7"
     },
     "require-dev": {
