--- a/package.json
+++ b/package.json
@@ -5,16 +5,17 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@awcodes/alpine-floating-ui": "^3.4.0",
         "@tailwindcss/forms": "^0.5",
         "@tailwindcss/typography": "^0.5",
-        "alpinejs": "^3.8",
+        "alpinejs": "^3.10.5",
         "autoprefixer": "^10.4",
         "laravel-vite-plugin": "^0.7.2",
         "postcss": "^8.1.14",
         "resolve-url-loader": "^3.1",
         "sass": "^1.3",
         "sass-loader": "^8.0",
-        "tailwindcss": "^3.0",
+        "tailwindcss": "^3.2.4",
         "vite": "^4.0.0"
     }
 }
