--- a/.github/workflows/.github-actions.yml
+++ b/.github/workflows/.github-actions.yml
@@ -9,6 +9,25 @@ on:
   workflow_dispatch:
 
 jobs:
+  laravel-pint:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Composer Install
+        run: composer install
+
+      - name: Run Laravel Pint
+        run: ./vendor/bin/pint
+
+      - name: Commit changes
+        uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: Apply Laravel Pint changes
+        env:
+          GITHUB_TOKEN: ${{ secrets.PINT }}  
   composer:
     runs-on: ubuntu-latest
 
@@ -79,7 +98,7 @@ jobs:
       - name: npm install
         run: |
           npm --version
-          npm run production
+          npm run build
 
       - name: 'Compress public folder'
         run: tar -czvf public.tgz public/
@@ -139,7 +158,7 @@ jobs:
 
       - name: Create temp database
         run: |
-          mysql --host 127.0.0.1 -uroot -proot -e "CREATE DATABASE IF NOT EXISTS laravel_db"
+          mysql --host 127.0.0.1 -uroot -proot -e "CREATE DATABASE IF NOT EXISTS testing"
 
       - name: Execute tests
         run: |
@@ -147,7 +166,6 @@ jobs:
           php -v
           php artisan migrate --force
           php artisan key:generate
-          php artisan passport:install
           ./vendor/phpunit/phpunit/phpunit --version
           phpdbg -qrr ./vendor/phpunit/phpunit/phpunit -v --colors=never --stderr --coverage-clover=coverage.xml
           export CODECOV_TOKEN=${{ secrets.CODECOV_TOKEN }}
